# template_python_project

./: README.md
my-project-template/{{ cookiecutter.repo_name }}/: .gitignore
my-project-template/{{ cookiecutter.repo_name }}/06_notebooks/00_one-note/: Open Notebook.onetoc2  about.one  goals.one
my-project-template/{{ cookiecutter.repo_name }}/07_reports/00_latex_ieee_template/: bibliography.bib  valgaev_pub_ieee.tex
{{ cookiecutter.repo_name }}/: pyproject.toml
{{ cookiecutter.repo_name }}/06_notebooks/00_one-note/: all.one  meetings.one
